Third person tests, fun with forest map